--- a/my_blog/templates/base.html
+++ b/my_blog/templates/base.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'my_blog:index' %}">PRIVATE DIARY</a>
+        <a class="navbar-brand" href="{% url 'my_blog:index' %}">My Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item {% block active_inquiry %}{% endblock %}">
-              <a class="nav-link" href="#">INQUIRY</a>
+              <a class="nav-link" href="{% url 'my_blog:inquiry' %}">INQUIRY</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
