表示リスト作成

--- a/my_blog/templates/base.html
+++ b/my_blog/templates/base.html
@@ -41,6 +41,12 @@
             <li class="nav-item {% block active_inquiry %}{% endblock %}">
               <a class="nav-link" href="{% url 'my_blog:inquiry' %}">INQUIRY</a>
             </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item {% block active_diary_list %}{% endblock %}">
+              <a class="nav-link" href="{% url 'my_blog:blog_list' %}">BLOG LIST</a>
+            </li>
+            {% endif %}
+
           </ul>
           <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
