ローカル環境完成

--- a/my_blog/templates/base.html
+++ b/my_blog/templates/base.html
@@ -88,7 +88,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Private Dairy 2019</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; My Blog</p>
       </div>
       <!-- /.container -->
     </footer>
