--- a/my_blog/templates/blog_list.html
+++ b/my_blog/templates/blog_list.html
@@ -19,7 +19,7 @@
                 </div>
                 {% for blog in blog_list %}
                 <div class="post-preview">
-                    <a href="">
+                    <a href="{% url 'my_blog:blog_detail' blog.pk %}">
                         <h2 class="post-title">
                             {{ blog.title }}
                         </h2>
