Changes to be committed:
modified:   README.md
new file:   media/cat.jpg
new file:   media/dog_phvpFqG.jpg
modified:   my_blog/templates/blog_list.html

--- a/my_blog/templates/blog_list.html
+++ b/my_blog/templates/blog_list.html
@@ -15,7 +15,7 @@
         <div class="my-div-style w-100">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="clearfix">
-                    <a class="btn btn-primary float-right" href="">新規作成</a>
+                    <a class="btn btn-primary float-right" href="{% url 'my_blog:blog_create' %}">新規作成</a>
                 </div>
                 {% for blog in blog_list %}
                 <div class="post-preview">
